<resources>
    <string name="app_name">Shop Center</string>
    <string name="create_account"> Create Account </string>
    <string name="title_activity_app_home">AppHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logout">Logout</string>
    <string name="settings">settings</string>
    <string name="categories">categories</string>
    <string name="orderss">orderss</string>
    <string name="close">Close</string>
    <string name="true_1">True</string>
    <string name="update">Update</string>
    <string name="change_profile">Change Profile</string>
    <string name="carts">carts</string>
    <string name="title_activity_admin_home">Admin</string>
    <string name="current_categories">Current Categories</string>
    <string name="product_categories">Product Categories</string>
    <string name="available_categories">Available Categories</string>
    <string name="add_new_category">add new category</string>
    <string name="modern_glasses">Modern Glasses</string>
    <string name="cameras">Cameras</string>
    <string name="add_product">Add Product</string>
    <string name="product_category_name">Product Category Name</string>
    <string name="search">Search</string>
    <string name="edit_category">Edit Category</string>
    <string name="_400_products">400 Products</string>
    <string name="edit_product">Edit Product</string>
    <string name="my_products_details">My Products Details</string>
    <string name="popular_products">Popular Products</string>
    <string name="recent_products">Recent Products</string>
    <string name="delete_categories">Delete Categories</string>
    <string name="update1">Update</string>
    <string name="delete2">Delete</string>
    <string name="laptops_ad">Laptops</string>
    <string name="phones_ad">Phones</string>
    <string name="television_ad">Television</string>
    <string name="head_phones_ad">Head Phones</string>
    <string name="sell_products">Sell Products</string>
    <string name="seller_registration">Seller Registration</string>
    <string name="register">Register</string>
    <string name="your_names">Your Name</string>
    <string name="your_passworda">Your Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_have_an_account_login">Already Have an Account?Login</string>
    <string name="edit">Edit</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="add_an_items">Add an Items</string>
    <string name="product_count">products_cnt</string>
    <string name="product_name">product_names</string>
    <string name="product_description">product_des</string>
    <string name="product_price">product_pri</string>
    <string name="userhome1">UserHome</string>
    <string name="delete1">Delete</string>
    <string name="deactivate1">Deactivate</string>
    <string name="name1">Name</string>
    <string name="email_id1">Email_id</string>
    <string name="password1">Password</string>
    <string name="customer_details1">Customer Details</string>
    <string name="view11">View</string>
    <string name="backs1">back</string>
    <string name="admin_page1">Admin Page</string>
    <string name="current">current</string>
    <string name="available">Available</string>
    <string name="_0likes">0Likes</string>
    <string name="_0_comments">0 Comments</string>
    <string name="price_ad">Price</string>
    <string name="_0_likes">0 likes</string>
    <string name="products1">Products</string>
    <string name="lists11">lists</string>
    <string name="view_details1">View Details</string>
    <string name="search_product_name">Search Product Name</string>
    <string name="payment_total">Payment Total</string>
    <string name="make_payment">Make Payment</string>
    <string name="order_details1">Order Details</string>
    <string name="delivered1">Delivered</string>
    <string name="price11">Price</string>
    <string name="order_id1">Order id</string>
    <string name="back111">back</string>
    <string name="product_name31">Product Name</string>
    <string name="product_description21">Product Description</string>
    <string name="productPrice21">Product Price</string>
    <string name="product_count21">Product Count</string>
    <string name="name21">Name</string>
    <string name="shop_cen">Shop Center</string>
    <string name="address_1">Address</string>
    <string name="product_name21">Product Name</string>
    <string name="zero0">0</string>
    <string name="the_way_of_shopping">The way of shopping</string>
    <string name="e_shop">e-shop</string>
    <string name="customers1">Customers</string>
    <string name="profile1">Profile</string>
    <string name="name221">Name</string>
    <string name="seller">Seller</string>
</resources>
