<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_carts"
            android:icon="@drawable/nav_cart"
            android:iconTint="@android:color/white"
            android:title="@string/carts" />


        <item
            android:id="@+id/nav_admin_home"
            android:icon="@drawable/home_icon3"
            android:iconTint="@android:color/white"
            android:title="@string/admin_page1" />
        <item
            android:id="@+id/nav_seller_btn"
            android:icon="@drawable/sell2"
            android:iconTint="@android:color/white"
            android:title="@string/sell_products" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:iconTint="@android:color/white"
            android:title="@string/profile1" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:iconTint="@android:color/white"
            android:title="@string/logout" />
    </group>



</menu>
