<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/admin_nav_categories"
            android:icon="@drawable/category"
            android:iconTint="@android:color/white"
            android:title="@string/categories" />
        <item
            android:id="@+id/admin_nav_Userhome"
            android:icon="@drawable/category"
            android:iconTint="@android:color/white"
            android:title="@string/userhome1" />
        <item
            android:id="@+id/admin_nav_customerDetails"
            android:icon="@drawable/category"
            android:iconTint="@android:color/white"
            android:title="Customers" />

        <item
            android:id="@+id/admin_nav_logout"
            android:icon="@drawable/logout"
            android:iconTint="@android:color/white"
            android:title="@string/logout" />
    </group>


</menu>
