<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:scaleType="centerCrop"
                android:src="@drawable/amin_home_5"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_marginTop="120dp"
                android:text="@string/my_products_details"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="160dp"
                android:text="@string/_400_products"
                />
        </RelativeLayout>



    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bolditalic"
            android:text="@string/products1"
            android:textColor="#FF9800"
            android:textSize="24sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:fontFamily="@font/roboto_bolditalic"
            android:text="@string/lists11"
            android:textColor="#FF9800"
            android:textSize="20sp"

            />


    </LinearLayout>
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/Admin_recycler_view2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</androidx.recyclerview.widget.RecyclerView>

</LinearLayout>