<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Admin_edit_products">

    <RelativeLayout
        android:id="@+id/admin_change_product_relative_layout_top"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="40dp">
        <Button
            android:id="@+id/admin_edit_product_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:background="@color/colorAccent"

            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/back111"
            android:textColor="@android:color/white"
            />

        <TextView

            android:id="@+id/admin_edit_product_name"
            android:layout_width="322dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"

            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"

            />
    </RelativeLayout>
    <ImageView
        android:layout_below="@+id/admin_change_product_relative_layout_top"
        android:id="@+id/edit_product_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"


        android:src="@drawable/mylap2"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_layer1"
        android:layout_width="match_parent"

        android:layout_below="@+id/edit_product_image"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_product_name"

            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:layout_width="match_parent"
            android:hint="@string/product_name21"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_layer2"
        android:layout_below="@+id/edit_layer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_product_description"

            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:hint="@string/product_description21"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_layer3"
        android:layout_below="@+id/edit_layer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_product_price"

            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"

                android:inputType="number"
            android:layout_width="match_parent"
            android:hint="@string/productPrice21"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_layer4"
        android:layout_below="@+id/edit_layer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_product_count"

            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"

            android:inputType="number"
            android:layout_width="match_parent"
            android:hint="@string/product_count21"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>





    <LinearLayout
       android:layout_marginTop="70dp"
       android:id="@+id/edit_linear1"
       android:layout_below="@+id/edit_layer3"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <Button
           android:id="@+id/admin_update_current_product"
           android:layout_marginLeft="90dp"
           android:background="@drawable/admin_input_design"
           android:text="@string/update1"
           android:textColor="@color/colorAccent"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
       <Button
           android:id="@+id/admin_edit_product_delete"
           android:gravity="center"

           android:background="@drawable/admin_input_design"
           android:textColor="@color/colorAccent"
           android:text="@string/delete1"
           android:layout_marginLeft="20dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

   </LinearLayout>
</RelativeLayout>