<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register1"
    tools:context=".RegisterActivity">

    <ImageView

        android:layout_marginTop="60dp"
        android:id="@+id/register_app_logo"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="104dp"
        android:foregroundGravity="center"

        android:src="@drawable/applogo"
        android:layout_height="200dp" />

    <EditText
        android:id="@+id/register_username_txt"
        android:layout_width="match_parent"
        android:layout_below="@+id/register_app_logo"
        android:background="@drawable/input_design"
        android:padding="10dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:layout_marginLeft="15dp"
        android:hint="@string/your_names"

        android:textColor="@android:color/black"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/register_email_txt"
        android:layout_width="match_parent"
        android:layout_below="@+id/register_username_txt"
        android:background="@drawable/input_design"
        android:padding="10dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:layout_marginLeft="15dp"
        android:hint="Your Mail  Id"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/register_password_txt"
        android:layout_width="match_parent"
        android:layout_below="@+id/register_email_txt"
        android:background="@drawable/input_design"
        android:padding="10dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_marginLeft="15dp"
        android:hint="@string/your_passworda"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_txt"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/create_an_account"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/goto_login"
        android:layout_below="@+id/register_btn"
        android:textSize="15dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:text="@string/already_have_an_account_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>