<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SellerAddProductActivity">
    <RelativeLayout
        android:id="@+id/seller_edit_product_relative_layout_top"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="40dp">
        <Button
            android:id="@+id/seller_add_product_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:background="@color/colorAccent"

            android:gravity="center"
            android:textStyle="bold"
            android:text="back"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/seller_add_items_name"
            android:layout_width="322dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"

            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:textStyle="bold"

            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/S_select_product_image"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:layout_below="@+id/seller_edit_product_relative_layout_top"

        android:layout_marginTop="-1dp"
        android:src="@drawable/mylap2" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layer1"
        android:layout_width="match_parent"

        android:layout_below="@+id/S_select_product_image"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/S_product_name"
            android:inputType="text"
            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:layout_width="match_parent"
            android:hint="@string/product_name"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layer2"
        android:layout_below="@+id/input_layer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/S_product_description"

            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:hint="@string/product_description"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layer3"
        android:layout_below="@+id/input_layer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/S_product_price"

            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:inputType="number|numberDecimal"
            android:layout_width="match_parent"
            android:hint="@string/product_price"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layer4"
        android:layout_below="@+id/input_layer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/S_product_counts"

            android:textColorHint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="55dp"
            android:inputType="number|numberDecimal"
            android:layout_width="match_parent"
            android:hint="@string/product_count"
            android:textColor="@color/colorPrimaryDark"

            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:id="@+id/seller_select_category"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_below="@+id/input_layer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/seller_add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_select_category"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="24dp"

        android:layout_marginRight="50dp"
        android:background="@drawable/admin_input_design"
        android:padding="4dp"
        android:text="@string/add_product"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />


</RelativeLayout>